# valrdotcom_backend

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: apps.py  urls.py  views.py
bank/: generation.py
core/: settings.py  urls.py
users/: authentication.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_name_useraccount_first_name_and_more.py  0003_useraccount_balance_alter_useraccount_is_active_and_more.py  0004_alter_useraccount_is_active_and_more.py
